--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,7 @@ h6 {
 .header .logo img {
   max-height: 36px;
   margin-right: 8px;
+  transform: translateY(-3px);
 }
 
 .header .logo h1 {
@@ -462,6 +463,7 @@ h6 {
 .footer .footer-about .logo img {
   max-height: 40px;
   margin-right: 6px;
+  transform: translateY(-3px);
 }
 
 .footer .footer-about .logo span {
